// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Tests desktop compressed table displays correctly 1`] = `
.c1 {
  width: 100%;
  border-collapse: collapse;
}

.c2 {
  background-color: #F7F7F7;
  font-family: 'AvenirHeavy';
  font-size: 1.8rem;
  text-align: left;
}

.c2 th {
  padding: 2.4rem 2.4rem 2.4rem 0rem;
}

.c2 th .CellContents {
  display: flex;
  flex-direction: row;
  gap: 1.7rem;
}

.c2 th:first-child {
  padding: 2.4rem;
  border-top-left-radius: 1.6rem;
}

.c2 th:last-child {
  border-top-right-radius: 1.6rem;
}

.c3 {
  background-color: none;
}

.c6 {
  background-color: #FFFFFF;
  font-family: 'AvenirBook';
  font-size: 1.8rem;
  text-align: left;
}

.c6 th {
  font-weight: inherit;
  vertical-align: bottom;
}

.c6 th .CellContents {
  box-sizing: border-box;
  padding: 2.4rem 2.4rem 2.4rem 0rem;
  border-bottom: 1px solid #E1E1E1;
}

.c6 th:first-child .CellContents {
  margin-left: 2.4rem;
}

.c6 th:last-child .CellContents {
  margin-right: 2.4rem;
  padding-right: 0rem;
}

.c6 tr .MobileCell {
  border-bottom: 1px solid #E1E1E1;
}

.c6 tr:last-child .CellContents {
  border-bottom: none;
}

.c6 tr:last-child th:last-child {
  border-bottom-right-radius: 1.6rem;
}

.c6 tr:last-child th:first-child {
  border-bottom-left-radius: 1.6rem;
}

.c6 tr:last-child .MobileCell {
  border-bottom: none;
}

.c0 {
  width: 100%;
  overflow-x: auto;
  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.12);
  border-radius: 1.6rem;
  border-radius: 1.6rem;
}

.c4 {
  border: none;
  background-color: inherit;
  cursor: pointer;
  border-radius: 50%;
}

.c4 svg {
  position: relative;
  z-index: 100;
}

.c4:hover div {
  display: block;
}

.c5 {
  position: absolute;
  margin-left: -2rem;
  margin-top: -3.8rem;
  height: 5.6rem;
  width: 5.2rem;
  border-radius: 50%;
  background-color: #DEDAFA;
  display: none;
}

@media only screen and (max-width: 480px) {
  .c2 {
    font-size: 1.4rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th {
    padding: 0.8rem 1.6rem 0.8rem 0rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th:first-child {
    padding: 0.8rem 1.6rem 0.8rem 1.6rem;
    border-top-left-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th:last-child {
    border-top-right-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 {
    font-size: 1.4rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 th .CellContents {
    padding: 0.8rem 1.6rem 0.8rem 0rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 th:first-child .CellContents {
    margin-left: 1.6rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 th:last-child .CellContents {
    margin-right: 1.6rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 tr:last-child th:last-child {
    border-bottom-right-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 tr:last-child th:first-child {
    border-bottom-left-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c0 {
    border-radius: 0.8rem;
  }
}

<div
  class="c0 SingtelTable-Container"
  data-testid="SingtelTable"
  style="width: 300px;"
>
  <table
    class="c1"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
      >
        <th>
          <div
            class="CellContents"
          >
             
            <span>
               
              Operator
               
            </span>
             
          </div>
        </th>
        <th>
          <div
            class="CellContents"
          >
             
            <span>
               
              Headset Display
               
            </span>
             
          </div>
        </th>
        <th>
          <div
            class="CellContents"
          >
             
            <span>
               
              3G Availability
               
            </span>
             
            <button
              class="c4"
            >
              <svg
                fill="none"
                height="15"
                viewBox="0 0 10 15"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.43789 0.195262C4.69824 -0.0650872 5.12035 -0.0650872 5.3807 0.195262L9.62334 4.4379C9.88369 4.69825 9.88369 5.12036 9.62334 5.38071C9.36299 5.64106 8.94088 5.64106 8.68053 5.38071L5.57596 2.27614L5.57596 12.3905L8.68053 9.28596C8.94088 9.02561 9.36299 9.02561 9.62334 9.28596C9.88369 9.5463 9.88369 9.96841 9.62334 10.2288L5.3807 14.4714C5.12035 14.7318 4.69824 14.7318 4.43789 14.4714L0.195251 10.2288C-0.0650984 9.96841 -0.0650984 9.54631 0.195251 9.28596C0.4556 9.02561 0.877711 9.02561 1.13806 9.28596L4.24263 12.3905L4.24263 2.27614L1.13806 5.38071C0.877711 5.64106 0.4556 5.64106 0.195251 5.38071C-0.0650986 5.12036 -0.0650986 4.69825 0.195251 4.4379L4.43789 0.195262Z"
                  fill="#222222"
                  fill-rule="evenodd"
                />
              </svg>
              <div
                class="c5"
              />
            </button>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="c6"
    >
      <tr
        class="c3"
      >
        <th
          class="operator-1"
        >
          <div
            class="CellContents"
          >
             
            <span>
              *Celcom Axiata (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-1"
        >
          <div
            class="CellContents"
          >
             
            <span>
              CELCOM / My Celcom / 502 19
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-1"
        >
          <div
            class="CellContents"
          >
             
            <span>
              3
            </span>
             
          </div>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="operator-2"
        >
          <div
            class="CellContents"
          >
             
            <span>
              *DiGi Telecom (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-2"
        >
          <div
            class="CellContents"
          >
             
            <span>
              DiGi 1800 / DiGi /  MYMY18
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-2"
        >
          <div
            class="CellContents"
          >
             
            <span>
              1
            </span>
             
          </div>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="operator-3"
        >
          <div
            class="CellContents"
          >
             
            <span>
              *Maxis (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-3"
        >
          <div
            class="CellContents"
          >
             
            <span>
              U Mobile / MYS 18 / MY 18
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-3"
        >
          <div
            class="CellContents"
          >
             
            <span>
              2
            </span>
             
          </div>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="operator-4"
        >
          <div
            class="CellContents"
          >
             
            <span>
              U Mobile (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-4"
        >
          <div
            class="CellContents"
          >
             
            <span>
              CELCOM / My Celcom / 502 19
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-4"
        >
          <div
            class="CellContents"
          >
             
            <span>
              4
            </span>
             
          </div>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Tests desktop table displays correctly 1`] = `
.c1 {
  width: 100%;
  border-collapse: collapse;
}

.c2 {
  background-color: #F7F7F7;
  font-family: 'AvenirHeavy';
  font-size: 1.8rem;
  text-align: left;
}

.c2 th {
  padding: 2.4rem 2.4rem 2.4rem 0rem;
}

.c2 th .CellContents {
  display: flex;
  flex-direction: row;
  gap: 1.7rem;
}

.c2 th:first-child {
  padding: 2.4rem;
  border-top-left-radius: 1.6rem;
}

.c2 th:last-child {
  border-top-right-radius: 1.6rem;
}

.c3 {
  background-color: none;
}

.c6 {
  background-color: #FFFFFF;
  font-family: 'AvenirBook';
  font-size: 1.8rem;
  text-align: left;
}

.c6 th {
  font-weight: inherit;
  vertical-align: bottom;
}

.c6 th .CellContents {
  box-sizing: border-box;
  padding: 2.4rem 2.4rem 2.4rem 0rem;
  border-bottom: 1px solid #E1E1E1;
}

.c6 th:first-child .CellContents {
  margin-left: 2.4rem;
}

.c6 th:last-child .CellContents {
  margin-right: 2.4rem;
  padding-right: 0rem;
}

.c6 tr .MobileCell {
  border-bottom: 1px solid #E1E1E1;
}

.c6 tr:last-child .CellContents {
  border-bottom: none;
}

.c6 tr:last-child th:last-child {
  border-bottom-right-radius: 1.6rem;
}

.c6 tr:last-child th:first-child {
  border-bottom-left-radius: 1.6rem;
}

.c6 tr:last-child .MobileCell {
  border-bottom: none;
}

.c0 {
  width: 100%;
  overflow-x: auto;
  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.12);
  border-radius: 1.6rem;
  border-radius: 1.6rem;
}

.c4 {
  border: none;
  background-color: inherit;
  cursor: pointer;
  border-radius: 50%;
}

.c4 svg {
  position: relative;
  z-index: 100;
}

.c4:hover div {
  display: block;
}

.c5 {
  position: absolute;
  margin-left: -2rem;
  margin-top: -3.8rem;
  height: 5.6rem;
  width: 5.2rem;
  border-radius: 50%;
  background-color: #DEDAFA;
  display: none;
}

@media only screen and (max-width: 480px) {
  .c2 {
    font-size: 1.4rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th {
    padding: 0.8rem 1.6rem 0.8rem 0rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th:first-child {
    padding: 0.8rem 1.6rem 0.8rem 1.6rem;
    border-top-left-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th:last-child {
    border-top-right-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 {
    font-size: 1.4rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 th .CellContents {
    padding: 0.8rem 1.6rem 0.8rem 0rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 th:first-child .CellContents {
    margin-left: 1.6rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 th:last-child .CellContents {
    margin-right: 1.6rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 tr:last-child th:last-child {
    border-bottom-right-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 tr:last-child th:first-child {
    border-bottom-left-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c0 {
    border-radius: 0.8rem;
  }
}

<div
  class="c0 SingtelTable-Container"
  data-testid="SingtelTable"
  style="width: 800px;"
>
  <table
    class="c1"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
      >
        <th>
          <div
            class="CellContents"
          >
             
            <span>
               
              Operator
               
            </span>
             
          </div>
        </th>
        <th>
          <div
            class="CellContents"
          >
             
            <span>
               
              Headset Display
               
            </span>
             
          </div>
        </th>
        <th>
          <div
            class="CellContents"
          >
             
            <span>
               
              3G Availability
               
            </span>
             
            <button
              class="c4"
            >
              <svg
                fill="none"
                height="15"
                viewBox="0 0 10 15"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.43789 0.195262C4.69824 -0.0650872 5.12035 -0.0650872 5.3807 0.195262L9.62334 4.4379C9.88369 4.69825 9.88369 5.12036 9.62334 5.38071C9.36299 5.64106 8.94088 5.64106 8.68053 5.38071L5.57596 2.27614L5.57596 12.3905L8.68053 9.28596C8.94088 9.02561 9.36299 9.02561 9.62334 9.28596C9.88369 9.5463 9.88369 9.96841 9.62334 10.2288L5.3807 14.4714C5.12035 14.7318 4.69824 14.7318 4.43789 14.4714L0.195251 10.2288C-0.0650984 9.96841 -0.0650984 9.54631 0.195251 9.28596C0.4556 9.02561 0.877711 9.02561 1.13806 9.28596L4.24263 12.3905L4.24263 2.27614L1.13806 5.38071C0.877711 5.64106 0.4556 5.64106 0.195251 5.38071C-0.0650986 5.12036 -0.0650986 4.69825 0.195251 4.4379L4.43789 0.195262Z"
                  fill="#222222"
                  fill-rule="evenodd"
                />
              </svg>
              <div
                class="c5"
              />
            </button>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="c6"
    >
      <tr
        class="c3"
      >
        <th
          class="operator-1"
        >
          <div
            class="CellContents"
          >
             
            <span>
              *Celcom Axiata (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-1"
        >
          <div
            class="CellContents"
          >
             
            <span>
              CELCOM / My Celcom / 502 19
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-1"
        >
          <div
            class="CellContents"
          >
             
            <span>
              3
            </span>
             
          </div>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="operator-2"
        >
          <div
            class="CellContents"
          >
             
            <span>
              *DiGi Telecom (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-2"
        >
          <div
            class="CellContents"
          >
             
            <span>
              DiGi 1800 / DiGi /  MYMY18
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-2"
        >
          <div
            class="CellContents"
          >
             
            <span>
              1
            </span>
             
          </div>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="operator-3"
        >
          <div
            class="CellContents"
          >
             
            <span>
              *Maxis (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-3"
        >
          <div
            class="CellContents"
          >
             
            <span>
              U Mobile / MYS 18 / MY 18
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-3"
        >
          <div
            class="CellContents"
          >
             
            <span>
              2
            </span>
             
          </div>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="operator-4"
        >
          <div
            class="CellContents"
          >
             
            <span>
              U Mobile (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-4"
        >
          <div
            class="CellContents"
          >
             
            <span>
              CELCOM / My Celcom / 502 19
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-4"
        >
          <div
            class="CellContents"
          >
             
            <span>
              4
            </span>
             
          </div>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Tests mobile table displays correctly 1`] = `
.c1 {
  width: 100%;
  border-collapse: collapse;
}

.c2 {
  background-color: #F7F7F7;
  font-family: 'AvenirHeavy';
  font-size: 1.8rem;
  text-align: left;
}

.c2 th {
  padding: 2.4rem 2.4rem 2.4rem 0rem;
}

.c2 th .CellContents {
  display: flex;
  flex-direction: row;
  gap: 1.7rem;
}

.c2 th:first-child {
  padding: 2.4rem;
  border-top-left-radius: 1.6rem;
}

.c2 th:last-child {
  border-top-right-radius: 1.6rem;
}

.c3 {
  background-color: none;
}

.c4 {
  background-color: #FFFFFF;
  font-family: 'AvenirBook';
  font-size: 1.8rem;
  text-align: left;
}

.c4 th {
  font-weight: inherit;
  vertical-align: bottom;
}

.c4 th .CellContents {
  box-sizing: border-box;
  padding: 2.4rem 2.4rem 2.4rem 0rem;
  border-bottom: 1px solid #E1E1E1;
}

.c4 th:first-child .CellContents {
  margin-left: 2.4rem;
}

.c4 th:last-child .CellContents {
  margin-right: 2.4rem;
  padding-right: 0rem;
}

.c4 tr .MobileCell {
  border-bottom: 1px solid #E1E1E1;
}

.c4 tr:last-child .CellContents {
  border-bottom: none;
}

.c4 tr:last-child th:last-child {
  border-bottom-right-radius: 1.6rem;
}

.c4 tr:last-child th:first-child {
  border-bottom-left-radius: 1.6rem;
}

.c4 tr:last-child .MobileCell {
  border-bottom: none;
}

.c0 {
  width: 100%;
  overflow-x: auto;
  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.12);
  border-radius: 1.6rem;
  border-radius: 1.6rem;
}

.c5 {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  line-height: 2.4rem;
  margin-right: 1.6rem;
}

.c5 label {
  font-family: 'AvenirHeavy';
}

@media only screen and (max-width: 480px) {
  .c2 {
    font-size: 1.4rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th {
    padding: 0.8rem 1.6rem 0.8rem 0rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th:first-child {
    padding: 0.8rem 1.6rem 0.8rem 1.6rem;
    border-top-left-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th:last-child {
    border-top-right-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c4 {
    font-size: 1.4rem;
  }
}

@media only screen and (max-width: 480px) {
  .c4 th .CellContents {
    padding: 0.8rem 1.6rem 0.8rem 0rem;
  }
}

@media only screen and (max-width: 480px) {
  .c4 th:first-child .CellContents {
    margin-left: 1.6rem;
  }
}

@media only screen and (max-width: 480px) {
  .c4 th:last-child .CellContents {
    margin-right: 1.6rem;
  }
}

@media only screen and (max-width: 480px) {
  .c4 tr:last-child th:last-child {
    border-bottom-right-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c4 tr:last-child th:first-child {
    border-bottom-left-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c0 {
    border-radius: 0.8rem;
  }
}

<div
  class="c0 SingtelTable-Container"
  data-testid="SingtelTable"
>
  <table
    class="c1"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
      >
        <th>
          <div
            class="CellContents"
          >
             
            <span>
              My Contacts
            </span>
             
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="c4"
    >
      <tr
        class="c3"
      >
        <th
          class="c5 MobileCell"
        >
          <label>
            <span>
              Operator
               : 
              <br />
            </span>
            <span>
              Headset Display
               : 
              <br />
            </span>
            <span>
              3G Availability
               : 
              <br />
            </span>
          </label>
          <span>
            <span>
              *Celcom Axiata (LTE)
               
              <br />
            </span>
            <span>
              CELCOM / My Celcom / 502 19
               
              <br />
            </span>
            <span>
              3
               
              <br />
            </span>
          </span>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="c5 MobileCell"
        >
          <label>
            <span>
              Operator
               : 
              <br />
            </span>
            <span>
              Headset Display
               : 
              <br />
            </span>
            <span>
              3G Availability
               : 
              <br />
            </span>
          </label>
          <span>
            <span>
              *DiGi Telecom (LTE)
               
              <br />
            </span>
            <span>
              DiGi 1800 / DiGi /  MYMY18
               
              <br />
            </span>
            <span>
              1
               
              <br />
            </span>
          </span>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="c5 MobileCell"
        >
          <label>
            <span>
              Operator
               : 
              <br />
            </span>
            <span>
              Headset Display
               : 
              <br />
            </span>
            <span>
              3G Availability
               : 
              <br />
            </span>
          </label>
          <span>
            <span>
              *Maxis (LTE)
               
              <br />
            </span>
            <span>
              U Mobile / MYS 18 / MY 18
               
              <br />
            </span>
            <span>
              2
               
              <br />
            </span>
          </span>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="c5 MobileCell"
        >
          <label>
            <span>
              Operator
               : 
              <br />
            </span>
            <span>
              Headset Display
               : 
              <br />
            </span>
            <span>
              3G Availability
               : 
              <br />
            </span>
          </label>
          <span>
            <span>
              U Mobile (LTE)
               
              <br />
            </span>
            <span>
              CELCOM / My Celcom / 502 19
               
              <br />
            </span>
            <span>
              4
               
              <br />
            </span>
          </span>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Tests table sorting works 1`] = `
.c1 {
  width: 100%;
  border-collapse: collapse;
}

.c2 {
  background-color: #F7F7F7;
  font-family: 'AvenirHeavy';
  font-size: 1.8rem;
  text-align: left;
}

.c2 th {
  padding: 2.4rem 2.4rem 2.4rem 0rem;
}

.c2 th .CellContents {
  display: flex;
  flex-direction: row;
  gap: 1.7rem;
}

.c2 th:first-child {
  padding: 2.4rem;
  border-top-left-radius: 1.6rem;
}

.c2 th:last-child {
  border-top-right-radius: 1.6rem;
}

.c3 {
  background-color: none;
}

.c6 {
  background-color: #FFFFFF;
  font-family: 'AvenirBook';
  font-size: 1.8rem;
  text-align: left;
}

.c6 th {
  font-weight: inherit;
  vertical-align: bottom;
}

.c6 th .CellContents {
  box-sizing: border-box;
  padding: 2.4rem 2.4rem 2.4rem 0rem;
  border-bottom: 1px solid #E1E1E1;
}

.c6 th:first-child .CellContents {
  margin-left: 2.4rem;
}

.c6 th:last-child .CellContents {
  margin-right: 2.4rem;
  padding-right: 0rem;
}

.c6 tr .MobileCell {
  border-bottom: 1px solid #E1E1E1;
}

.c6 tr:last-child .CellContents {
  border-bottom: none;
}

.c6 tr:last-child th:last-child {
  border-bottom-right-radius: 1.6rem;
}

.c6 tr:last-child th:first-child {
  border-bottom-left-radius: 1.6rem;
}

.c6 tr:last-child .MobileCell {
  border-bottom: none;
}

.c0 {
  width: 100%;
  overflow-x: auto;
  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.12);
  border-radius: 1.6rem;
  border-radius: 1.6rem;
}

.c4 {
  border: none;
  background-color: inherit;
  cursor: pointer;
  border-radius: 50%;
}

.c4 svg {
  position: relative;
  z-index: 100;
}

.c4:hover div {
  display: block;
}

.c5 {
  position: absolute;
  margin-left: -2rem;
  margin-top: -3.8rem;
  height: 5.6rem;
  width: 5.2rem;
  border-radius: 50%;
  background-color: #DEDAFA;
  display: none;
}

@media only screen and (max-width: 480px) {
  .c2 {
    font-size: 1.4rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th {
    padding: 0.8rem 1.6rem 0.8rem 0rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th:first-child {
    padding: 0.8rem 1.6rem 0.8rem 1.6rem;
    border-top-left-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c2 th:last-child {
    border-top-right-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 {
    font-size: 1.4rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 th .CellContents {
    padding: 0.8rem 1.6rem 0.8rem 0rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 th:first-child .CellContents {
    margin-left: 1.6rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 th:last-child .CellContents {
    margin-right: 1.6rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 tr:last-child th:last-child {
    border-bottom-right-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c6 tr:last-child th:first-child {
    border-bottom-left-radius: 0.8rem;
  }
}

@media only screen and (max-width: 480px) {
  .c0 {
    border-radius: 0.8rem;
  }
}

<div
  class="c0 SingtelTable-Container"
  data-testid="SingtelTable"
>
  <table
    class="c1"
  >
    <thead
      class="c2"
    >
      <tr
        class="c3"
      >
        <th>
          <div
            class="CellContents"
          >
             
            <span>
               
              Operator
               
            </span>
             
          </div>
        </th>
        <th>
          <div
            class="CellContents"
          >
             
            <span>
               
              Headset Display
               
            </span>
             
          </div>
        </th>
        <th>
          <div
            class="CellContents"
          >
             
            <span>
               
              3G Availability
               
            </span>
             
            <button
              class="c4"
            >
              <svg
                fill="none"
                height="15"
                viewBox="0 0 10 15"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M9.50668 10.2288L5.31547 14.4714C5.05828 14.7318 4.64129 14.7318 4.3841 14.4714L0.192895 10.2288C-0.0642973 9.96841 -0.0642973 9.54631 0.192895 9.28596C0.450088 9.02561 0.867081 9.02561 1.12427 9.28596L4.1912 12.3905L4.1912 0.666667C4.1912 0.298477 4.48606 1.84549e-07 4.84978 1.71674e-07C5.21351 1.58799e-07 5.50837 0.298477 5.50837 0.666667L5.50837 12.3905L8.5753 9.28596C8.83249 9.02561 9.24948 9.02561 9.50668 9.28596C9.76387 9.5463 9.76387 9.96841 9.50668 10.2288Z"
                  fill="#222222"
                  fill-rule="evenodd"
                />
              </svg>
              <div
                class="c5"
              />
            </button>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="c6"
    >
      <tr
        class="c3"
      >
        <th
          class="operator-2"
        >
          <div
            class="CellContents"
          >
             
            <span>
              *DiGi Telecom (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-2"
        >
          <div
            class="CellContents"
          >
             
            <span>
              DiGi 1800 / DiGi /  MYMY18
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-2"
        >
          <div
            class="CellContents"
          >
             
            <span>
              1
            </span>
             
          </div>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="operator-3"
        >
          <div
            class="CellContents"
          >
             
            <span>
              *Maxis (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-3"
        >
          <div
            class="CellContents"
          >
             
            <span>
              U Mobile / MYS 18 / MY 18
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-3"
        >
          <div
            class="CellContents"
          >
             
            <span>
              2
            </span>
             
          </div>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="operator-1"
        >
          <div
            class="CellContents"
          >
             
            <span>
              *Celcom Axiata (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-1"
        >
          <div
            class="CellContents"
          >
             
            <span>
              CELCOM / My Celcom / 502 19
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-1"
        >
          <div
            class="CellContents"
          >
             
            <span>
              3
            </span>
             
          </div>
        </th>
      </tr>
      <tr
        class="c3"
      >
        <th
          class="operator-4"
        >
          <div
            class="CellContents"
          >
             
            <span>
              U Mobile (LTE)
            </span>
             
          </div>
        </th>
        <th
          class="headset-4"
        >
          <div
            class="CellContents"
          >
             
            <span>
              CELCOM / My Celcom / 502 19
            </span>
             
          </div>
        </th>
        <th
          class="avaliability-4"
        >
          <div
            class="CellContents"
          >
             
            <span>
              4
            </span>
             
          </div>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;
